Grammar/RAQLParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:/github/raql-dotnet/Grammar/RAQL.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

/// <summary>
/// The raql parser class
/// </summary>
/// <seealso cref="Parser"/>
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class RAQLParser : Parser {
	/// <summary>
	/// The decision to dfa
	/// </summary>
	protected static DFA[] decisionToDFA;
	/// <summary>
	/// The prediction context cache
	/// </summary>
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	/// <summary>
	/// The null
	/// </summary>
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, IN=7, BASE_OPERATOR=8, 
		STRING_OPERATOR=9, NUMBER_OPERATOR=10, CONJUNCTIONS=11, NUMBER=12, WORD=13, 
		STRING=14, BOOLEAN=15, NULL=16;
	/// <summary>
	/// The rule bool array
	/// </summary>
	public const int
		RULE_raql = 0, RULE_clause = 1, RULE_conjunction = 2, RULE_operation = 3, 
		RULE_string_array_operation = 4, RULE_number_array_operation = 5, RULE_bool_array_operation = 6, 
		RULE_array_operator = 7, RULE_string_operation = 8, RULE_string_operator = 9, 
		RULE_number_operation = 10, RULE_number_operator = 11, RULE_bool_operation = 12, 
		RULE_bool_operator = 13, RULE_field = 14, RULE_nullstring = 15, RULE_string = 16, 
		RULE_string_array = 17, RULE_number = 18, RULE_number_array = 19, RULE_bool = 20, 
		RULE_bool_array = 21;
	/// <summary>
	/// The rule names
	/// </summary>
	public static readonly string[] ruleNames = {
		"raql", "clause", "conjunction", "operation", "string_array_operation", 
		"number_array_operation", "bool_array_operation", "array_operator", "string_operation", 
		"string_operator", "number_operation", "number_operator", "bool_operation", 
		"bool_operator", "field", "nullstring", "string", "string_array", "number", 
		"number_array", "bool", "bool_array"
	};

	/// <summary>
	/// The literal names
	/// </summary>
	private static readonly string[] _LiteralNames = {
		null, "'('", "' '", "')'", "'['", "','", "']'", null, null, null, null, 
		null, null, null, null, null, "'null'"
	};
	/// <summary>
	/// The symbolic names
	/// </summary>
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, "IN", "BASE_OPERATOR", "STRING_OPERATOR", 
		"NUMBER_OPERATOR", "CONJUNCTIONS", "NUMBER", "WORD", "STRING", "BOOLEAN", 
		"NULL"
	};
	/// <summary>
	/// The symbolic names
	/// </summary>
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	/// <summary>
	/// Gets the value of the vocabulary
	/// </summary>
	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	/// <summary>
	/// Gets the value of the grammar file name
	/// </summary>
	public override string GrammarFileName { get { return "RAQL.g4"; } }

	/// <summary>
	/// Gets the value of the rule names
	/// </summary>
	public override string[] RuleNames { get { return ruleNames; } }

	/// <summary>
	/// Gets the value of the serialized atn
	/// </summary>
	public override int[] SerializedAtn { get { return _serializedATN; } }

	/// <summary>
	/// Initializes a new instance of the <see cref="RAQLParser"/> class
	/// </summary>
	static RAQLParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		/// <summary>
		/// Initializes a new instance of the <see cref="RAQLParser"/> class
		/// </summary>
		/// <param name="input">The input</param>
		public RAQLParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		/// <summary>
		/// Initializes a new instance of the <see cref="RAQLParser"/> class
		/// </summary>
		/// <param name="input">The input</param>
		/// <param name="output">The output</param>
		/// <param name="errorOutput">The error output</param>
		public RAQLParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	/// <summary>
	/// The raql context class
	/// </summary>
	/// <seealso cref="ParserRuleContext"/>
	public partial class RaqlContext : ParserRuleContext {
		/// <summary>
		/// Clauses this instance
		/// </summary>
		/// <returns>The clause context</returns>
		[System.Diagnostics.DebuggerNonUserCode] public ClauseContext clause() {
			return GetRuleContext<ClauseContext>(0);
		}
		/// <summary>
		/// Eofs this instance
		/// </summary>
		/// <returns>The terminal node</returns>
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(RAQLParser.Eof, 0); }
		/// <summary>
		/// Initializes a new instance of the <see cref="RaqlContext"/> class
		/// </summary>
		/// <param name="parent">The parent</param>
		/// <param name="invokingState">The invoking state</param>
		public RaqlContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		/// <summary>
		/// Gets the value of the rule index
		/// </summary>
		public override int RuleIndex { get { return RULE_raql; } }
		/// <summary>
		/// Accepts the visitor
		/// </summary>
		/// <typeparam name="TResult">The result</typeparam>
		/// <param name="visitor">The visitor</param>
		/// <returns>The result</returns>
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRAQLVisitor<TResult> typedVisitor = visitor as IRAQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRaql(this);
			else return visitor.VisitChildren(this);
		}
	}

	/// <summary>
	/// Raqls this instance
	/// </summary>
	/// <returns>The localctx</returns>
	[RuleVersion(0)]
	public RaqlContext raql() {
		RaqlContext _localctx = new RaqlContext(Context, State);
		EnterRule(_localctx, 0, RULE_raql);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 44;
			clause(0);
			State = 45;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	/// <summary>
	/// The clause context class
	/// </summary>
	/// <seealso cref="ParserRuleContext"/>
	public partial class ClauseContext : ParserRuleContext {
		/// <summary>
		/// Operations this instance
		/// </summary>
		/// <returns>The operation context</returns>
		[System.Diagnostics.DebuggerNonUserCode] public OperationContext operation() {
			return GetRuleContext<OperationContext>(0);
		}
		/// <summary>
		/// Clauses this instance
		/// </summary>
		/// <returns>The clause context array</returns>
		[System.Diagnostics.DebuggerNonUserCode] public ClauseContext[] clause() {
			return GetRuleContexts<ClauseContext>();
		}
		/// <summary>
		/// Clauses the i
		/// </summary>
		/// <param name="i">The </param>
		/// <returns>The clause context</returns>
		[System.Diagnostics.DebuggerNonUserCode] public ClauseContext clause(int i) {
			return GetRuleContext<ClauseContext>(i);
		}
		/// <summary>
		/// Conjunctions this instance
		/// </summary>
		/// <returns>The conjunction context</returns>
		[System.Diagnostics.DebuggerNonUserCode] public ConjunctionContext conjunction() {
			return GetRuleContext<ConjunctionContext>(0);
		}
		/// <summary>
		/// Initializes a new instance of the <see cref="ClauseContext"/> class
		/// </summary>
		/// <param name="parent">The parent</param>
		/// <param name="invokingState">The invoking state</param>
		public ClauseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		/// <summary>
		/// Gets the value of the rule index
		/// </summary>
		public override int RuleIndex { get { return RULE_clause; } }
		/// <summary>
		/// Accepts the visitor
		/// </summary>
		/// <typeparam name="TResult">The result</typeparam>
		/// <param name="visitor">The visitor</param>
		/// <returns>The result</returns>
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRAQLVisitor<TResult> typedVisitor = visitor as IRAQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClause(this);
			else return visitor.VisitChildren(this);
		}
	}

	/// <summary>
	/// Clauses this instance
	/// </summary>
	/// <returns>The clause context</returns>
	[RuleVersion(0)]
	public ClauseContext clause() {
		return clause(0);
	}

	/// <summary>
	/// Clauses the  p
	/// </summary>
	/// <param name="_p">The </param>
	/// <exception cref="NoViableAltException"></exception>
	/// <exception cref="FailedPredicateException">Precpred(Context, 1)</exception>
	/// <returns>The localctx</returns>
	private ClauseContext clause(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		ClauseContext _localctx = new ClauseContext(Context, _parentState);
		ClauseContext _prevctx = _localctx;
		int _startState = 2;
		EnterRecursionRule(_localctx, 2, RULE_clause, _p);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 59;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case IN:
			case BASE_OPERATOR:
			case STRING_OPERATOR:
			case NUMBER_OPERATOR:
			case WORD:
				{
				State = 48;
				operation();
				}
				break;
			case T__0:
				{
				State = 49;
				Match(T__0);
				State = 51;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__1) {
					{
					State = 50;
					Match(T__1);
					}
				}

				State = 53;
				clause(0);
				State = 55;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__1) {
					{
					State = 54;
					Match(T__1);
					}
				}

				State = 57;
				Match(T__2);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			Context.Stop = TokenStream.LT(-1);
			State = 67;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ClauseContext(_parentctx, _parentState);
					PushNewRecursionContext(_localctx, _startState, RULE_clause);
					State = 61;
					if (!(Precpred(Context, 1))) throw new FailedPredicateException(this, "Precpred(Context, 1)");
					State = 62;
					conjunction();
					State = 63;
					clause(2);
					}
					} 
				}
				State = 69;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	/// <summary>
	/// The conjunction context class
	/// </summary>
	/// <seealso cref="ParserRuleContext"/>
	public partial class ConjunctionContext : ParserRuleContext {
		/// <summary>
		/// Conjunctionses this instance
		/// </summary>
		/// <returns>The terminal node</returns>
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CONJUNCTIONS() { return GetToken(RAQLParser.CONJUNCTIONS, 0); }
		/// <summary>
		/// Initializes a new instance of the <see cref="ConjunctionContext"/> class
		/// </summary>
		/// <param name="parent">The parent</param>
		/// <param name="invokingState">The invoking state</param>
		public ConjunctionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		/// <summary>
		/// Gets the value of the rule index
		/// </summary>
		public override int RuleIndex { get { return RULE_conjunction; } }
		/// <summary>
		/// Accepts the visitor
		/// </summary>
		/// <typeparam name="TResult">The result</typeparam>
		/// <param name="visitor">The visitor</param>
		/// <returns>The result</returns>
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRAQLVisitor<TResult> typedVisitor = visitor as IRAQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConjunction(this);
			else return visitor.VisitChildren(this);
		}
	}

	/// <summary>
	/// Conjunctions this instance
	/// </summary>
	/// <returns>The localctx</returns>
	[RuleVersion(0)]
	public ConjunctionContext conjunction() {
		ConjunctionContext _localctx = new ConjunctionContext(Context, State);
		EnterRule(_localctx, 4, RULE_conjunction);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 70;
			Match(CONJUNCTIONS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	/// <summary>
	/// The operation context class
	/// </summary>
	/// <seealso cref="ParserRuleContext"/>
	public partial class OperationContext : ParserRuleContext {
		/// <summary>
		/// Bools the array operation
		/// </summary>
		/// <returns>The bool array operation context</returns>
		[System.Diagnostics.DebuggerNonUserCode] public Bool_array_operationContext bool_array_operation() {
			return GetRuleContext<Bool_array_operationContext>(0);
		}
		/// <summary>
		/// Numbers the array operation
		/// </summary>
		/// <returns>The number array operation context</returns>
		[System.Diagnostics.DebuggerNonUserCode] public Number_array_operationContext number_array_operation() {
			return GetRuleContext<Number_array_operationContext>(0);
		}
		/// <summary>
		/// Strings the array operation
		/// </summary>
		/// <returns>The string array operation context</returns>
		[System.Diagnostics.DebuggerNonUserCode] public String_array_operationContext string_array_operation() {
			return GetRuleContext<String_array_operationContext>(0);
		}
		/// <summary>
		/// Bools the operation
		/// </summary>
		/// <returns>The bool operation context</returns>
		[System.Diagnostics.DebuggerNonUserCode] public Bool_operationContext bool_operation() {
			return GetRuleContext<Bool_operationContext>(0);
		}
		/// <summary>
		/// Numbers the operation
		/// </summary>
		/// <returns>The number operation context</returns>
		[System.Diagnostics.DebuggerNonUserCode] public Number_operationContext number_operation() {
			return GetRuleContext<Number_operationContext>(0);
		}
		/// <summary>
		/// Strings the operation
		/// </summary>
		/// <returns>The string operation context</returns>
		[System.Diagnostics.DebuggerNonUserCode] public String_operationContext string_operation() {
			return GetRuleContext<String_operationContext>(0);
		}
		/// <summary>
		/// Initializes a new instance of the <see cref="OperationContext"/> class
		/// </summary>
		/// <param name="parent">The parent</param>
		/// <param name="invokingState">The invoking state</param>
		public OperationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		/// <summary>
		/// Gets the value of the rule index
		/// </summary>
		public override int RuleIndex { get { return RULE_operation; } }
		/// <summary>
		/// Accepts the visitor
		/// </summary>
		/// <typeparam name="TResult">The result</typeparam>
		/// <param name="visitor">The visitor</param>
		/// <returns>The result</returns>
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRAQLVisitor<TResult> typedVisitor = visitor as IRAQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOperation(this);
			else return visitor.VisitChildren(this);
		}
	}

	/// <summary>
	/// Operations this instance
	/// </summary>
	/// <returns>The localctx</returns>
	[RuleVersion(0)]
	public OperationContext operation() {
		OperationContext _localctx = new OperationContext(Context, State);
		EnterRule(_localctx, 6, RULE_operation);
		try {
			State = 78;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 72;
				bool_array_operation();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 73;
				number_array_operation();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 74;
				string_array_operation();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 75;
				bool_operation();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 76;
				number_operation();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 77;
				string_operation();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	/// <summary>
	/// The string array operationcontext class
	/// </summary>
	/// <seealso cref="ParserRuleContext"/>
	public partial class String_array_operationContext : ParserRuleContext {
		/// <summary>
		/// Fields this instance
		/// </summary>
		/// <returns>The field context</returns>
		[System.Diagnostics.DebuggerNonUserCode] public FieldContext field() {
			return GetRuleContext<FieldContext>(0);
		}
		/// <summary>
		/// Arrays the operator
		/// </summary>
		/// <returns>The array operator context</returns>
		[System.Diagnostics.DebuggerNonUserCode] public Array_operatorContext array_operator() {
			return GetRuleContext<Array_operatorContext>(0);
		}
		/// <summary>
		/// Strings the array
		/// </summary>
		/// <returns>The string array context</returns>
		[System.Diagnostics.DebuggerNonUserCode] public String_arrayContext string_array() {
			return GetRuleContext<String_arrayContext>(0);
		}
		/// <summary>
		/// Initializes a new instance of the <see cref="String_array_operationContext"/> class
		/// </summary>
		/// <param name="parent">The parent</param>
		/// <param name="invokingState">The invoking state</param>
		public String_array_operationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		/// <summary>
		/// Gets the value of the rule index
		/// </summary>
		public override int RuleIndex { get { return RULE_string_array_operation; } }
		/// <summary>
		/// Accepts the visitor
		/// </summary>
		/// <typeparam name="TResult">The result</typeparam>
		/// <param name="visitor">The visitor</param>
		/// <returns>The result</returns>
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRAQLVisitor<TResult> typedVisitor = visitor as IRAQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitString_array_operation(this);
			else return visitor.VisitChildren(this);
		}
	}

	/// <summary>
	/// Strings the array operation
	/// </summary>
	/// <returns>The localctx</returns>
	[RuleVersion(0)]
	public String_array_operationContext string_array_operation() {
		String_array_operationContext _localctx = new String_array_operationContext(Context, State);
		EnterRule(_localctx, 8, RULE_string_array_operation);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 80;
			field();
			State = 81;
			array_operator();
			State = 82;
			string_array();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	/// <summary>
	/// The number array operationcontext class
	/// </summary>
	/// <seealso cref="ParserRuleContext"/>
	public partial class Number_array_operationContext : ParserRuleContext {
		/// <summary>
		/// Fields this instance
		/// </summary>
		/// <returns>The field context</returns>
		[System.Diagnostics.DebuggerNonUserCode] public FieldContext field() {
			return GetRuleContext<FieldContext>(0);
		}
		/// <summary>
		/// Arrays the operator
		/// </summary>
		/// <returns>The array operator context</returns>
		[System.Diagnostics.DebuggerNonUserCode] public Array_operatorContext array_operator() {
			return GetRuleContext<Array_operatorContext>(0);
		}
		/// <summary>
		/// Numbers the array
		/// </summary>
		/// <returns>The number array context</returns>
		[System.Diagnostics.DebuggerNonUserCode] public Number_arrayContext number_array() {
			return GetRuleContext<Number_arrayContext>(0);
		}
		/// <summary>
		/// Initializes a new instance of the <see cref="Number_array_operationContext"/> class
		/// </summary>
		/// <param name="parent">The parent</param>
		/// <param name="invokingState">The invoking state</param>
		public Number_array_operationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		/// <summary>
		/// Gets the value of the rule index
		/// </summary>
		public override int RuleIndex { get { return RULE_number_array_operation; } }
		/// <summary>
		/// Accepts the visitor
		/// </summary>
		/// <typeparam name="TResult">The result</typeparam>
		/// <param name="visitor">The visitor</param>
		/// <returns>The result</returns>
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRAQLVisitor<TResult> typedVisitor = visitor as IRAQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumber_array_operation(this);
			else return visitor.VisitChildren(this);
		}
	}

	/// <summary>
	/// Numbers the array operation
	/// </summary>
	/// <returns>The localctx</returns>
	[RuleVersion(0)]
	public Number_array_operationContext number_array_operation() {
		Number_array_operationContext _localctx = new Number_array_operationContext(Context, State);
		EnterRule(_localctx, 10, RULE_number_array_operation);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 84;
			field();
			State = 85;
			array_operator();
			State = 86;
			number_array();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	/// <summary>
	/// The bool array operationcontext class
	/// </summary>
	/// <seealso cref="ParserRuleContext"/>
	public partial class Bool_array_operationContext : ParserRuleContext {
		/// <summary>
		/// Fields this instance
		/// </summary>
		/// <returns>The field context</returns>
		[System.Diagnostics.DebuggerNonUserCode] public FieldContext field() {
			return GetRuleContext<FieldContext>(0);
		}
		/// <summary>
		/// Arrays the operator
		/// </summary>
		/// <returns>The array operator context</returns>
		[System.Diagnostics.DebuggerNonUserCode] public Array_operatorContext array_operator() {
			return GetRuleContext<Array_operatorContext>(0);
		}
		/// <summary>
		/// Bools the array
		/// </summary>
		/// <returns>The bool array context</returns>
		[System.Diagnostics.DebuggerNonUserCode] public Bool_arrayContext bool_array() {
			return GetRuleContext<Bool_arrayContext>(0);
		}
		/// <summary>
		/// Initializes a new instance of the <see cref="Bool_array_operationContext"/> class
		/// </summary>
		/// <param name="parent">The parent</param>
		/// <param name="invokingState">The invoking state</param>
		public Bool_array_operationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		/// <summary>
		/// Gets the value of the rule index
		/// </summary>
		public override int RuleIndex { get { return RULE_bool_array_operation; } }
		/// <summary>
		/// Accepts the visitor
		/// </summary>
		/// <typeparam name="TResult">The result</typeparam>
		/// <param name="visitor">The visitor</param>
		/// <returns>The result</returns>
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRAQLVisitor<TResult> typedVisitor = visitor as IRAQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBool_array_operation(this);
			else return visitor.VisitChildren(this);
		}
	}

	/// <summary>
	/// Bools the array operation
	/// </summary>
	/// <returns>The localctx</returns>
	[RuleVersion(0)]
	public Bool_array_operationContext bool_array_operation() {
		Bool_array_operationContext _localctx = new Bool_array_operationContext(Context, State);
		EnterRule(_localctx, 12, RULE_bool_array_operation);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 88;
			field();
			State = 89;
			array_operator();
			State = 90;
			bool_array();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	/// <summary>
	/// The array operatorcontext class
	/// </summary>
	/// <seealso cref="ParserRuleContext"/>
	public partial class Array_operatorContext : ParserRuleContext {
		/// <summary>
		/// Ins this instance
		/// </summary>
		/// <returns>The terminal node</returns>
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IN() { return GetToken(RAQLParser.IN, 0); }
		/// <summary>
		/// Initializes a new instance of the <see cref="Array_operatorContext"/> class
		/// </summary>
		/// <param name="parent">The parent</param>
		/// <param name="invokingState">The invoking state</param>
		public Array_operatorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		/// <summary>
		/// Gets the value of the rule index
		/// </summary>
		public override int RuleIndex { get { return RULE_array_operator; } }
		/// <summary>
		/// Accepts the visitor
		/// </summary>
		/// <typeparam name="TResult">The result</typeparam>
		/// <param name="visitor">The visitor</param>
		/// <returns>The result</returns>
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRAQLVisitor<TResult> typedVisitor = visitor as IRAQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArray_operator(this);
			else return visitor.VisitChildren(this);
		}
	}

	/// <summary>
	/// Arrays the operator
	/// </summary>
	/// <returns>The localctx</returns>
	[RuleVersion(0)]
	public Array_operatorContext array_operator() {
		Array_operatorContext _localctx = new Array_operatorContext(Context, State);
		EnterRule(_localctx, 14, RULE_array_operator);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 92;
			Match(IN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
